--- a/css/register.css
+++ b/css/register.css
@@ -6,7 +6,7 @@ html {
 body {
     background: url("https://lh3.googleusercontent.com/-z0EtyA60h_c/ZWREOgO5FcI/AAAAAAAAAC0/8O5s779qljMU6dmCG9SQHSyuH_UL2hQGwCNcBGAsYHQ/s0/2.png") no-repeat center center fixed;
     background-size: cover;
-    font-family: 'Droid Serif', serif;
+    font-family: 'Quicksand', sans-serif;
 }
 
 #container {
