--- a/css/register.css
+++ b/css/register.css
@@ -60,7 +60,7 @@ input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus {
     outline: 0;
-    background: rgba(235, 30, 54, 0.3);
+    background: whitesmoke;
     border-radius: 1.2rem;
     border-color: transparent;
 }
