--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,38 @@
     font-family: 'Quicksand', sans-serif;
     
   }
-.search{
+.navigation{
+width: 100%;
+height: 30%;
+position: sticky;
+
+}
+.navigation-bar{
+  display: flex;
+}
+.phone-number{
+  text-align: left;
+}
+.location{
+  text-align: left;
+}
+.navigation-bar2{
+  width: 100%;
+  height: 30%;
+  display: flex;
+  gap: 20px;
   
 }
+.logo{
+  width: 20%;
+  height: 100%;
+}
 
+.searchs{
+  width: 70%;
+  height: 10%;
+  margin-top: 10%;
+}
 
 .product-list {
   padding: 50px;
@@ -14,5 +42,6 @@
   flex-wrap: wrap;
   gap: 50px;
 }
+
 
 
