--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 * {
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
+    margin: 0;
+    padding: 0;
     
   }
 .navigation{
@@ -11,6 +13,7 @@ position: sticky;
 }
 .navigation-bar{
   display: flex;
+  background-color: #0F3057;
 }
 .phone-number{
   text-align: left;
@@ -43,5 +46,21 @@ position: sticky;
   gap: 50px;
 }
 
+.footer{
+  width: 100%;
+  height: 40%;
+  background-color: #0F3057;
+  gap: 20px;
+ 
+}
+.ini{
+  display: flex;
+  gap: 30px;
+}
+
+.facebook{
+  display: flex;
+  gap: 10px;
+}
 
 
