--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ position: sticky;
   width: 70%;
   height: 10%;
   margin-top: 10%;
+  padding: 10px;
 }
 
 .product-list {
@@ -81,10 +82,9 @@ position: sticky;
   
 }
 
-.add :hover{
-  background-color: #00587A;
   
-}
+  
+
 
 .btn-primary :hover{
   color: #F2F2F2;
@@ -92,3 +92,32 @@ position: sticky;
 
 
 
+.btn1 {
+  background-color:#0F3057; 
+  color: black; 
+  border: 2px solid #04AA6D;
+}
+
+.btn1:hover {
+  background-color: #73D1EC;
+  color: white;
+}
+.select { 
+  padding: 10px;
+  border: solid white;
+  outline: none;
+ font-size: 15px;
+ transition: 150ms;
+}
+
+.btn2{
+  font-size:15px ;
+  padding-top: 14px;
+}
+
+.select-menu{
+  transition: 150ms;
+  background-color: white;
+  border-radius: .25rem;
+  box-shadow: 0 2px 5px 0 rgba(0 ,0 ,0 .1);
+}
